syntax =  "proto3";

package auth;

option go_package = "/pb;pb";

service AuthService {
    rpc LoginUser(LoginRequest) returns (LoginResponse) {}
    rpc RegisterUser(RegisterRequest) returns (RegisterResponse) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string address = 4;
    string role = 5;
}

message RegisterResponse {
    string message = 1;
}