syntax = "proto3";

package user;

option go_package = "/pb;pb";

service GetUserService {
    rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse) {}
}

message GetUserByIDRequest {
    string user_id = 1;
}

message GetUserByIDResponse {
    double deposit = 1;
}
